# coai-code

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  coai.toml.example  deny.toml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  run_log.rs  session.rs
src/command/: mod.rs
src/config/: mod.rs
src/context/: mod.rs
src/core/: error.rs  mod.rs  types.rs
src/engine/: mod.rs
src/history/: mod.rs
src/llm/: client.rs  config.rs  context_compact.rs  mod.rs  model_caps.rs  tool_loop.rs
src/llm/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/skills/: mod.rs
src/tools/: agent.rs  cleanup.rs  exec.rs  file.rs  git.rs  history.rs  memory.rs  mod.rs  net.rs  registry.rs  search.rs  skills.rs  tasks.rs  validate.rs
src/tui/: game_loop.rs  input.rs  markdown.rs  mod.rs  render.rs  state.rs  terminal.rs
src/types/: atomic_task.rs  command.rs  mod.rs
tests/: integration_test.rs
